--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,4 +1,3 @@
-# deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,6 +18,7 @@ spec:
       labels:
         app: homework
     spec:
+      serviceAccountName: monitoring  # Подключаем сервисный аккаунт monitoring
       nodeSelector:
         homework: "true"  # Указываем, что поды могут запускаться только на нодах с меткой homework
       volumes:
@@ -63,4 +63,3 @@ spec:
             preStop:
               exec:
                 command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
-
